# OpenCircuit

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  clean.sh  premake5.lua  vcpkg.json
OpenCircuit/src/: Debug.cpp  Debug.h  Workspace.cpp  Workspace.h  debug.cpp  main.cpp
OpenCircuit/src/Rendering/Renderers/: ChunkRenderer.cpp  ChunkRenderer.h  DebugRenderer.cpp  DebugRenderer.h
OpenCircuit/src/Rendering/Window/: Event.cpp  Event.h  EventManager.cpp  EventManager.h  SFMLWindow.cpp  SFMLWindow.h  Window.h  window.cpp  window.h
OpenCircuit/src/Simulation/: Chunk.cpp  Chunk.h  Component.cpp  Component.h  Job.cpp  Job.h  Schematic.cpp  Schematic.h  Subcircuit.cpp  Subcircuit.h
OpenCircuit/src/UI/: ChunkViewEditorPanel.cpp  ChunkViewEditorPanel.h  ChunkViewPanel.cpp  ChunkViewPanel.h  PalettePanel.cpp  PalettePanel.h  SimulationManager.cpp  SimulationManager.h  UIPanel.cpp  UIPanel.h  ValidationPanel.cpp  ValidationPanel.h  WorkspacePanel.cpp  WorkspacePanel.h
OpenCircuit/src/Utility/: Serialization.h  vec4.h
OpenCircuit/src/Validation/: TestCase.h  TestCaseTransformer.cpp  TestCaseTransformer.h  ValidationSet.cpp  ValidationSet.h  Validator.cpp  Validator.h
